update sweet-corn image

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <section class="container container__blue">
       <div class="question__container">
         <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn">
-        <form name="question-form" class="question__form"> 
+        <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
          <h2 class="title question__title">маєте запитання чи </br>пропозиції?</h2>
          <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
           <div class="question__form-container">
@@ -391,7 +391,7 @@
             <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
             <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
           </div>
-          <button class="button question__button" type="button">Відправити заявку</button>
+          <button class="button question__button" type="submit">Відправити заявку</button>
         </form>
         <img src="./images/question_milk.png" alt="milk" class="question_image-milk">
         <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn">
