--- a/products.html
+++ b/products.html
@@ -265,7 +265,7 @@
               </div>
           </li>
            <li class="list product__list buds__list">
-            <img  class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/podusk-milk.png" alt="">
+            <img  class="product__list-image_buds" src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/podusk-milk.png" alt="">
           <p class="subtitle product__list-subtitle">Подушки кукурудзяні</br>X-TWIN зі смаком молока</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 130 г</p>
@@ -273,7 +273,7 @@
               </div>
           </li>
            <li class="list product__list buds__list">
-            <img class="product__list-image"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/podusk-strawberry.png" alt="">
+            <img class="product__list-image_buds"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/podusk-strawberry.png" alt="">
           <p class="subtitle product__list-subtitle">Подушки кукурудзяні</br>X-TWIN зі смаком полуниці</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 130 г</p>
@@ -281,7 +281,7 @@
               </div>
           </li>
            <li class="list product__list buds__list">
-            <img class="product__list-image"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/podusk-chokolate.png" alt="">
+            <img class="product__list-image_buds"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/podusk-chokolate.png" alt="">
           <p class="subtitle product__list-subtitle">Подушки кукурудзяні</br>X-TWIN зі смаком шоколаду</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 130 г</p>
@@ -313,7 +313,7 @@
               </div>
           </li>
            <li class="list product__list buds__list">
-            <img  class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/box.png" alt="">
+            <img  class="product__list-image_box" src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/box.png" alt="">
           <p class="subtitle product__list-subtitle">Вагові подушки</br>кукурудзяні зі смаком </br>полуниці/шоколаду/молока</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 3 кг</p>
@@ -321,7 +321,7 @@
               </div>
           </li>
            <li class="list product__list buds__list">
-            <img class="product__list-image"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/bamboo-chokolate.png" alt="">
+            <img class="product__list-image_stick"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/bamboo-chokolate.png" alt="">
           <p class="subtitle product__list-subtitle">Трубочки бамбукові</br> тростини</br> зі смаком шоколаду</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 3,3 кг</p>
@@ -329,7 +329,7 @@
               </div>
           </li>
            <li class="list product__list buds__list">
-            <img class="product__list-image"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/bamboo-milk.png" alt="">
+            <img class="product__list-image_stick"  src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_pads/bamboo-milk.png" alt="">
           <p class="subtitle product__list-subtitle">Трубочки бамбукові</br> тростини</br> зі смаком молока</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 3,3 кг</p>
@@ -354,7 +354,7 @@
           </li>
 
            <li class="list product__list corn__list">
-            <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_sweet/corn-surprise-girl.png" alt="">
+            <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1722009081/apero/products/corn_sweet/corn-surprise-girl_xsbflw.png" alt="">
             <p class="subtitle product__list-subtitle">Кукурудзяні палички</br>"Білочка" Дівчинка</br>з сюрпризом-іграшкою</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 100 г</p>
@@ -362,7 +362,7 @@
               </div>
           </li>
            <li class="list product__list corn__list">
-            <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/apero/products/corn_sweet/corn-surprise-boy.png" alt="">
+            <img class="product__list-image" src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1722009081/apero/products/corn_sweet/corn-surprise-boy_rbsjdp.png" alt="">
             <p class="subtitle product__list-subtitle">Кукурудзяні палички</br>"Білочка" Хлопчик</br>з сюрпризом-іграшкою</p>
                <div class="product__text-container">
                 <p class="text product__list-text">Вага: 100 г</p>
