update in section about for image top:170px

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
         <div class="footer__information-item">
           <p class="subtitle white footer__question-subtitle">Маєте запитання чи пропозиції?</p>
-          <p class="text white">Заповніть заявку і ми зв’яжемось з Вами </br>найближчим часом</p>
+          <p class="text white">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</p>
           <button class="button footer__button">Заповнити заявку</button>
         </div>
       </div>
