--- a/about.html
+++ b/about.html
@@ -302,11 +302,11 @@
       </div>
     </div>
 
-    <ul class="footer__conditions-item">
+    <!-- <ul class="footer__conditions-item">
       <li class="list"><a class="link text grey footer__conditions " href="">Політика конфіденційності</a></li>
       <li class="list"><a class="link text grey footer__conditions" href="">Договір оферти</a></li>
       <li class="list"><a class="link text grey footer__conditions" href="">Умови надання послуг</a></li>
-    </ul>
+    </ul> -->
 
   </div>
 
