--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     <section class="container container__blue">
       <div class="question__container">
         <img src="./images/question_popcorn.png" alt="popcorn salt" class="question_image-popcorn">
-        <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
+        <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> //цей сервіс для відправки заявок, потрібно переєструвати на електронну адресу когось із отримувачів Аперо
          <h2 class="title question__title">маєте запитання чи </br>пропозиції?</h2>
          <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
           <div class="question__form-container">
@@ -499,5 +499,6 @@
    <script type="module" src="./js/header-active-page.js"></script>
    <script type="module" src="./js/fixed-header.js"></script>
    <script type="module" src="./js/button-form.js"></script>
+   <script type="module" src="./js/form-button-send.js"></script>
   </body>
 </html>
