--- a/index.html
+++ b/index.html
@@ -464,11 +464,11 @@
 
   <!-- modal -->
 
-  <div class="backdrop is-hidden" data-modal>
+  <div class="backdrop is-hidden">
      <div class="modal">
       <div class="modal__container">
 
-        <button class="button__close modal-close" data-modal-close>
+        <button class="button__close modal-close">
           <svg width="30" height="30">
             <use href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
