--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <svg class="footer__icon" width="24" height="24">
               <use href="./images/symbol-defs.svg#icon-location"></use>
             </svg>
-            <a class="link text white" href="">60425 с.Купка, Чернівецька обл.</a>
+            <a class="link text white" href="https://maps.app.goo.gl/3H78u44s3FAfvyKq5">60425 с.Купка, Чернівецька обл.</a>
           </li>
           <li class="list footer__information-list">
             <svg class="footer__icon" width="24" height="24">
@@ -474,7 +474,7 @@
           </svg>
          </button>
         <form name="question-form" class="question__form" action="https://formspree.io/f/xvoedapk" method="POST"> 
-          <h2 class="title question__title">маєте запитання чи </br>пропозиції?</h2>
+          <h2 class="title question__title">бажаєте стати партнером</br>або маєте пропозиції?</h2>
           <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
            <div class="question__form-container">
              <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я">
