inputs are required

--- a/products.html
+++ b/products.html
@@ -536,9 +536,9 @@
        <h2 class="title question__title">бажаєте стати партнером</br>або маєте пропозиції?</h2>
        <h3 class="subtitle question__subtitle">Заповніть заявку і ми зв’яжемось з Вами найближчим часом</h3>
         <div class="question__form-container">
-          <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я">
-          <input class="question__input text black" type="email" name="email" id="email" placeholder="Ваш email">
-          <input class="question__input text black" type="tel" name="tel" id="tel" placeholder="Номер телефону">
+          <input class="question__input text black" type="text" name="name" id="name" placeholder="Ваше ім'я" required>
+          <input class="question__input text black" type="email" name="email" id="email" placeholder="Ваш email" required>
+          <input class="question__input text black" type="tel" name="tel" id="tel" placeholder="Номер телефону" required>
           <input class="question__input text black" type="text" name="company" id="company" placeholder="Назва компанії">
           <textarea class="question__textarea text black" name="comment" id="comment" cols="30" rows="10" placeholder="Напишіть щось"></textarea>
         </div>
