add new location

--- a/partner.html
+++ b/partner.html
@@ -123,7 +123,7 @@
           <svg class="footer__icon" width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-location"></use>
           </svg>
-          <a class="link text white" href="https://maps.app.goo.gl/3H78u44s3FAfvyKq5">60425 с.Купка, Чернівецька обл.</a>
+          <a class="link text white" href="https://maps.app.goo.gl/PVx23Uv1xSC4gq959">Чернівецька обл., смт. Глибока, </br> вул. Валерія Красняна, 60к</a>
         </li>
         <li class="list footer__information-list">
           <svg class="footer__icon" width="24" height="24">
