--- a/index.html
+++ b/index.html
@@ -39,9 +39,48 @@
              <li class="list"><a href="./partner.html" class="link nav__link text">Партнерам</a></li>
              <li class="list"><a href="./contacts.html" class="link nav__link text">Контакти</a></li>
          </ul>
-         <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button>
         </nav>   
+        <button type="button" class="button__mobile__menu">
+          <svg width="24" height="24">
+            <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+          </svg>
+        </button>
+        <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button>
    </header>
+   
+   <!-- <header class="header header__tablet">
+    <a href="./index.html" class="link"> 
+      <svg class="logo" width="80" height="24">
+        <use href="./images/symbol-defs.svg#icon-logo"></use>
+      </svg>
+      <svg class="logo__fixed" width="80" height="24">
+        <use href="./images/symbol-defs.svg#icon-logo-black"></use>
+      </svg>
+    </a>
+      <button type="button">
+        <svg width="24" height="24">
+          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+        </svg>
+      </button>
+      <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button>
+   </header>
+
+   <header class="header header__mobile">
+    <a href="./index.html" class="link"> 
+      <svg class="logo" width="80" height="24">
+        <use href="./images/symbol-defs.svg#icon-logo"></use>
+      </svg>
+      <svg class="logo__fixed" width="80" height="24">
+        <use href="./images/symbol-defs.svg#icon-logo-black"></use>
+      </svg>
+    </a>
+      <button type="button">
+        <svg width="24" height="24">
+          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+        </svg>
+      </button> -->
+      <!-- <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button> -->
+   <!-- </header> -->
 
    <main>
     <h1>Кукурудзяні палички та снеки</h1>
@@ -501,5 +540,6 @@
    <script type="module" src="./js/fixed-header.js"></script>
    <script type="module" src="./js/button-form.js"></script>
    <script type="module" src="./js/form-button-send.js"></script>
+   <script type="module" src="./js/header-mobile.js"></script>
   </body>
 </html>
