--- a/index.html
+++ b/index.html
@@ -41,46 +41,12 @@
          </ul>
         </nav>   
         <button type="button" class="button__mobile__menu">
-          <svg width="24" height="24">
+          <svg class="icon__menu__mobile"  width="24" height="24">
             <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
           </svg>
         </button>
         <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button>
    </header>
-   
-   <!-- <header class="header header__tablet">
-    <a href="./index.html" class="link"> 
-      <svg class="logo" width="80" height="24">
-        <use href="./images/symbol-defs.svg#icon-logo"></use>
-      </svg>
-      <svg class="logo__fixed" width="80" height="24">
-        <use href="./images/symbol-defs.svg#icon-logo-black"></use>
-      </svg>
-    </a>
-      <button type="button">
-        <svg width="24" height="24">
-          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
-        </svg>
-      </button>
-      <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button>
-   </header>
-
-   <header class="header header__mobile">
-    <a href="./index.html" class="link"> 
-      <svg class="logo" width="80" height="24">
-        <use href="./images/symbol-defs.svg#icon-logo"></use>
-      </svg>
-      <svg class="logo__fixed" width="80" height="24">
-        <use href="./images/symbol-defs.svg#icon-logo-black"></use>
-      </svg>
-    </a>
-      <button type="button">
-        <svg width="24" height="24">
-          <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
-        </svg>
-      </button> -->
-      <!-- <button type="button" class="header__button button__form modal-open">Отримати пропозицію</button> -->
-   <!-- </header> -->
 
    <main>
     <h1>Кукурудзяні палички та снеки</h1>
