adaptive for hero section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </div>
               <div class="hero__image-container">
                 <div class="hero__image hero__image-orange"></div>
-                <img src="./images/popcorn_orange.png" alt="Orange popcorn" width="413" height="595" class="hero-image">
+                <img src="./images/popcorn_orange.png" alt="Orange popcorn" class="hero-image">
               </div>
             </div>
           </div>
@@ -86,7 +86,7 @@
               </div>
               <div class="hero__image-container">
                 <div class="hero__image hero__image-violet"></div>
-                <img src="./images/popcorn_violet.png" alt="Violet popcorn" width="413" height="595" class="hero-image">
+                <img src="./images/popcorn_violet.png" alt="Violet popcorn" class="hero-image">
               </div>
             </div>
           </div>
@@ -105,7 +105,7 @@
               </div>
               <div class="hero__image-container">
                 <div class="hero__image hero__image-navy">  </div>
-                <img src="./images/popcorn_navy.png" alt="Navy popcorn" width="413" height="595" class="hero-image">
+                <img src="./images/popcorn_navy.png" alt="Navy popcorn" class="hero-image">
               </div>
             </div>
           </div>
@@ -124,13 +124,13 @@
               </div>
               <div class="hero__image-container"> 
                 <div class="hero__image hero__image-green"></div>
-                <img src="./images/popcorn_green.png" alt="Green popcorn" width="413" height="595" class="hero-image">  
+                <img src="./images/popcorn_green.png" alt="Green popcorn" class="hero-image">  
               </div>
             </div>
            </div>
         </div>
-        <!-- <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+        <!-- <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div> -->
       <!-- </div> -->
      </section>
