--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
               </div>
               <div class="hero__image-container">
                 <div class="hero__image hero__image-orange"></div>
-                <img src="./images/popcorn_orange.png" alt="Orange popcorn" class="hero-image">
+                <picture>
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193973/apero/hero/hero-desktop/hero-popChees-desk-1x-min_aftk2x.png 1x,
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193974/apero/hero/hero-desktop/hero-popChees-desk-2x-min_tckqmq.png 2x" 
+                  media="(min-width: 1440px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194000/apero/hero/hero-tablet/hero-popChese-tablet-1x-min_lamqn3.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194001/apero/hero/hero-tablet/hero-popChese-tablet-2x-min_uwwrxq.png 2x" 
+                  media="(min-width: 744px) and (max-width: 1439px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194097/apero/hero/hero-mob/hero-popCheese-mob-2x-min_cbydxv.png 2x" 
+                  media="(max-width: 743px)"/>
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194095/apero/hero/hero-mob/hero-popCheese-mob-1x-min_yecute.png"  alt="Orange popcorn" width="214" height="307" />
+               </picture>
+                <!-- <img src="./images/popcorn_orange.png" alt="Orange popcorn" class="hero-image"> -->
               </div>
             </div>
           </div>
@@ -86,7 +98,19 @@
               </div>
               <div class="hero__image-container">
                 <div class="hero__image hero__image-violet"></div>
-                <img src="./images/popcorn_violet.png" alt="Violet popcorn" class="hero-image">
+                <picture>
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193970/apero/hero/hero-desktop/hero-popCaramel-desk-1x-min_m3kidi.png 1x,
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193972/apero/hero/hero-desktop/hero-popCaramel-desk-2x-min_xakzqn.png 2x" 
+                  media="(min-width: 1440px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193997/apero/hero/hero-tablet/hero-popCaramel-tabblet-1x-min_llhksw.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193998/apero/hero/hero-tablet/hero-popCaramel-tabblet-2x-min_hdzkmj.png 2x" 
+                  media="(min-width: 744px) and (max-width: 1439px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194094/apero/hero/hero-mob/hero-popCaramel-mob-2x-min_uxetqn.png 2x" 
+                  media="(max-width: 743px)"/>
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194092/apero/hero/hero-mob/hero-popCaramel-mob-1x-min_ccvj0g.png"  alt="Violet popcorn"  width="214" height="307" />
+               </picture>
+                <!-- <img src="./images/popcorn_violet.png" alt="Violet popcorn" class="hero-image"> -->
               </div>
             </div>
           </div>
@@ -105,7 +129,19 @@
               </div>
               <div class="hero__image-container">
                 <div class="hero__image hero__image-navy">  </div>
-                <img src="./images/popcorn_navy.png" alt="Navy popcorn" class="hero-image">
+                <picture>
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193975/apero/hero/hero-desktop/hero-popSalt-desk-1x-min_d7kdow.png 1x,
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193977/apero/hero/hero-desktop/hero-popSalt-desk-2x-min_sxk4w1.png 2x" 
+                  media="(min-width: 1440px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194002/apero/hero/hero-tablet/hero-popSalt-tabblet-1x-min_wiaiq0.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194004/apero/hero/hero-tablet/hero-popSalt-tabblet-2x-min_eab1fd.png 2x" 
+                  media="(min-width: 744px) and (max-width: 1439px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194101/apero/hero/hero-mob/hero-popSalt-mob-2x-min_hddr2m.png 2x" 
+                  media="(max-width: 743px)" />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194099/apero/hero/hero-mob/hero-popSalt-mob-1x-min_msx9jo.png"  alt="Navy popcorn"  width="214" height="307" />
+               </picture>
+                <!-- <img src="./images/popcorn_navy.png" alt="Navy popcorn" class="hero-image"> -->
               </div>
             </div>
           </div>
@@ -124,7 +160,19 @@
               </div>
               <div class="hero__image-container"> 
                 <div class="hero__image hero__image-green"></div>
-                <img src="./images/popcorn_green.png" alt="Green popcorn" class="hero-image">  
+                <picture>
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193969/apero/hero/hero-desktop/hero-popButter-desk-1x-min_jfhysc.png 1x,
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193970/apero/hero/hero-desktop/hero-popButter-desk-2x-min_jynbbx.png 2x" 
+                  media="(min-width: 1440px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193994/apero/hero/hero-tablet/hero-popButter-tabblet-1x-min_gpinla.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732193996/apero/hero/hero-tablet/hero-popButter-tabblet-2x-min_cjh5kn.png 2x" 
+                  media="(min-width: 744px) and (max-width: 1439px)" />
+                  <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png 1x, 
+                  https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194090/apero/hero/hero-mob/hero-popButter-mob-2x-min_yfs7om.png 2x" 
+                  media="(max-width: 743px)" />
+               <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1732194088/apero/hero/hero-mob/hero-popButter-mob-1x-min_gauemx.png"  alt="Green popcorn"  width="214" height="307" />
+               </picture>
+                <!-- <img src="./images/popcorn_green.png" alt="Green popcorn" class="hero-image">   -->
               </div>
             </div>
            </div>
