about section hero is addaptived

--- a/about.html
+++ b/about.html
@@ -33,8 +33,13 @@
            <li class="list"><a href="./partner.html" class="link nav__link  nav__link-second text">Партнерам</a></li>
            <li class="list"><a href="./contacts.html" class="link nav__link nav__link-second  text">Контакти</a></li>
        </ul>
-       <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
       </nav>
+      <button type="button" class="button__mobile__menu">
+       <svg class="icon__menu__mobile icon__menu__mobile-second"  width="24" height="24">
+         <use href="./images/symbol-defs.svg#icon-menu-mobile"></use>
+       </svg>
+     </button>
+      <button type="button" class="header__button header__button-second modal-open">Отримати пропозицію</button>
 
     </div>
  </header>
@@ -44,8 +49,8 @@
       <div class="container">
         <h2 class="about__hero-title">Привіт, ми аперо</h2>
         <div class="about__hero-block">
-          <div>
-            <p class="text about__text">провідний вітчизняний виробник високоякісної </br> продукції із кукурудзи вирощеної в Україні</p>
+          <div class="about__hero__container">
+            <p class="text about__text">провідний вітчизняний виробник високоякісної продукції із кукурудзи вирощеної в Україні</p>
             <button class="button button__form partners__button modal-open">Стати партнером
               <svg width="40" height="40" class="hero-svg">
                 <use href="./images/symbol-defs.svg#icon-arrow-up-right"></use>
